# tt

./: Cargo.toml  README.md  mise.toml  test-daily.md
.github/: copilot-instructions.md
src/: arxiv.rs  cli.rs  config.rs  daily.rs  env.rs  errors.rs  file_handling.rs  main.rs  markdown.rs  pace.rs  paper_info.rs  recipes.rs
src/papers/: markdown.rs  mod.rs  paper_info.rs
templates/: daily.md  paper.md
