[package]
name = "tt"
authors = ["Andreas Kodewitz <andreas.kodewitz@gmail.com>"]
description = "Terminal tools for my convenience"
readme = "README.md"
license = "GPL-2.0-or-later"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
askama = "0.12.1"
clap = { version = "4.5.3", features = ["derive"] }
confy = "0.6.1"
regex = "1.10.4"
resolve-path = "0.1.0"
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
thiserror = "1.0.58"
ureq = "2.9.6"
url = "2.5.0"
