[package]
name = "tt"
authors = ["Andreas Kodewitz <andreas.kodewitz@gmail.com>"]
description = "Terminal tools for my convenience"
readme = "README.md"
license = "GPL-2.0-or-later"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
askama = "0.14.0"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
confy = { version = "1.0", features = ["toml"] }
regex = "1.10.4"
resolve-path = "0.1.0"
scraper = "0.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_derive = "1.0.197"
thiserror = "1.0.58"
ureq = "2.9.6"
url = "2.5.0"
